--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "parse a css color string (plus hsv and cmyk) into an object",
   "main": "index.js",
+  "types": "index.d.ts",
   "dependencies": {
     "color-convert": "~0.5.0"
   },
